--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><html lang="en" class="scroll-smooth">
-<head>
+<!DOCTYPE html><html lang="en" class="scroll-smooth"><head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>R Jaswanth — Portfolio</title>
@@ -7,7 +6,6 @@
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
-    // Tailwind config (optional custom theme)
     tailwind.config = {
       darkMode: 'class',
       theme: {
@@ -20,9 +18,7 @@
               800: '#3730a3', 900: '#312e81'
             }
           },
-          boxShadow: {
-            soft: '0 10px 25px -10px rgba(0,0,0,0.25)'
-          }
+          boxShadow: { soft: '0 10px 25px -10px rgba(0,0,0,0.25)' }
         }
       }
     }
@@ -36,19 +32,18 @@
   <!-- Babel for JSX in-browser (works fine on GitHub Pages) -->
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <style>
-    /* smooth fade-in */
     .fade-in { animation: fade 0.6s ease 1 both; }
     @keyframes fade { from { opacity: 0; transform: translateY(8px);} to { opacity: 1; transform: none;} }
   </style>
 </head>
 <body class="bg-white text-slate-800 dark:bg-slate-950 dark:text-slate-100">
   <div id="root"></div>  <script type="text/babel">
-    const { useEffect, useMemo, useState } = React;
+    const { useEffect, useState } = React;
 
-    // --- Utilities ---
+    // util
     const cx = (...classes) => classes.filter(Boolean).join(' ');
 
-    // Persist theme
+    // theme
     function useDarkMode() {
       const [dark, setDark] = useState(() => {
         const saved = localStorage.getItem('theme');
@@ -68,17 +63,18 @@
       return [dark, setDark];
     }
 
-    // --- Data (edit here) ---
+    // data
     const INFO = {
       name: 'R Jaswanth',
       tagline: 'AI/ML Student • Developer • Editor',
       location: 'India',
       email: 'jaswanthnaidu1309@gmail.com',
       phone: '6301114629',
-      github: 'https://github.com/', // put your GitHub profile link
-      linkedin: '#', // add your LinkedIn URL
-      resumeUrl: '#', // upload your PDF to repo and link here e.g. './assets/Jaswanth_Resume.pdf'
-      about: `I\'m a B.Tech CSE (AI & ML) student at Takshashila University. I love building practical projects,
+      github: 'https://github.com/', // update to your GitHub profile
+      linkedin: '#', // update to your LinkedIn URL
+      // place the file in public/assets/jaswanth.pdf (repo root on GitHub Pages)
+      resumeUrl: './assets/jaswanth.pdf',
+      about: `I'm a B.Tech CSE (AI & ML) student at Takshashila University. I love building practical projects,
       learning fast, and shipping clean, responsive UIs. I also enjoy video editing and creative tech.`
     };
 
@@ -114,18 +110,19 @@
       },
     ];
 
+    // Place these files under public/assets/certificates/
     const CERTIFICATIONS = [
-      'Microsoft Azure Administrator (Fundamentals/Administrator track)',
-      'Digital Electronics & VLSI',
-      'Deloitte (program/virtual experience)',
-      'German Language — Level 1'
+      { name: 'Microsoft Azure Administrator', file: './assets/certificates/azure.pdf' },
+      { name: 'Deloitte Technology Job Simulation', file: './assets/certificates/deloitte.pdf' },
+      { name: 'Simplilearn – Introduction to AI', file: './assets/certificates/simplilearn.pdf' },
+      { name: 'Xebia Academy – Certificate of Participation', file: './assets/certificates/xebia.pdf' },
+      { name: 'Digital Electronics & VLSI', file: './assets/certificates/vlsi.pdf' },
+      { name: 'German Language — Level 1', file: './assets/certificates/german.pdf' },
     ];
 
-    // --- UI Components ---
+    // UI
     function Container({ children, className }) {
-      return (
-        <div className={cx('mx-auto max-w-6xl px-4 sm:px-6 lg:px-8', className)}>{children}</div>
-      );
+      return <div className={cx('mx-auto max-w-6xl px-4 sm:px-6 lg:px-8', className)}>{children}</div>;
     }
 
     function Section({ id, title, subtitle, children }) {
@@ -142,6 +139,33 @@
       );
     }
 
+    function Icon({ name, className }) {
+      const icons = {
+        pdf: (
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" className={cx('w-4 h-4', className)}>
+            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6zM8 12h2a2 2 0 1 1 0 4H8v-4zm5 0h1.5a1.5 1.5 0 0 1 0 3H13v-3zm0-2V6l4 4h-4z"/>
+          </svg>
+        ),
+        download: (
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" className={cx('w-4 h-4', className)}>
+            <path d="M12 3a1 1 0 0 1 1 1v9.586l2.293-2.293a1 1 0 1 1 1.414 1.414l-4 4a1 1 0 0 1-1.414 0l-4-4a1 1 0 0 1 1.414-1.414L11 13.586V4a1 1 0 0 1 1-1z"/>
+            <path d="M5 20a1 1 0 0 1 1-1h12a1 1 0 1 1 0 2H6a1 1 0 0 1-1-1z"/>
+          </svg>
+        ),
+        sun: (
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth="1.5" stroke="currentColor" className={cx('w-4 h-4', className)}>
+            <path strokeLinecap="round" strokeLinejoin="round" d="M12 3v2m0 14v2m9-9h-2M5 12H3m15.364 6.364-1.414-1.414M7.05 7.05 5.636 5.636m12.728 0-1.414 1.414M7.05 16.95l-1.414 1.414M16 12a4 4 0 1 1-8 0 4 4 0 0 1 8 0z" />
+          </svg>
+        ),
+        moon: (
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" className={cx('w-4 h-4', className)}>
+            <path d="M21 12.79A9 9 0 1 1 11.21 3a7 7 0 1 0 9.79 9.79z"/>
+          </svg>
+        )
+      };
+      return icons[name] || null;
+    }
+
     function Nav({ onToggleTheme, dark }) {
       const [open, setOpen] = useState(false);
       const links = [
@@ -156,12 +180,12 @@
               {links.map(([label, href]) => (
                 <a key={label} href={href} className="text-sm font-medium hover:text-brand-600 transition-colors">{label}</a>
               ))}
-              <button onClick={onToggleTheme} aria-label="Toggle theme" className="rounded-xl border px-3 py-1.5 text-sm hover:shadow-soft dark:border-slate-700">
-                {dark ? 'Light' : 'Dark'}
+              <button onClick={onToggleTheme} aria-label="Toggle theme" className="inline-flex items-center gap-2 rounded-xl border px-3 py-1.5 text-sm hover:shadow-soft dark:border-slate-700">
+                <Icon name={dark ? 'sun' : 'moon'} /> {dark ? 'Light' : 'Dark'}
               </button>
             </nav>
             <button className="md:hidden inline-flex items-center" onClick={() => setOpen(!open)} aria-label="Menu">
-              <svg width="24" height="24" fill="none" stroke="currentColor" strokeWidth="2" className=""><path d="M4 6h16M4 12h16M4 18h16"/></svg>
+              <svg width="24" height="24" fill="none" stroke="currentColor" strokeWidth="2"><path d="M4 6h16M4 12h16M4 18h16"/></svg>
             </button>
           </Container>
           {open && (
@@ -170,7 +194,7 @@
                 {links.map(([label, href]) => (
                   <a key={label} href={href} className="text-sm font-medium" onClick={() => setOpen(false)}>{label}</a>
                 ))}
-                <button onClick={() => { onToggleTheme(); setOpen(false); }} className="mt-2 rounded-xl border px-3 py-2 text-sm dark:border-slate-700">{dark ? 'Light' : 'Dark'} Mode</button>
+                <button onClick={() => { onToggleTheme(); setOpen(false); }} className="mt-2 inline-flex items-center gap-2 rounded-xl border px-3 py-2 text-sm dark:border-slate-700"><Icon name={dark ? 'sun' : 'moon'} /> {dark ? 'Light' : 'Dark'} Mode</button>
               </Container>
             </div>
           )}
@@ -228,7 +252,6 @@
             {PROJECTS.map((p) => (
               <article key={p.title} className="group rounded-2xl border border-slate-200 dark:border-slate-800 overflow-hidden bg-white/70 dark:bg-slate-900/70 hover:shadow-soft transition">
                 <div className="h-40 bg-gradient-to-br from-slate-200 to-slate-100 dark:from-slate-800 dark:to-slate-900 grid place-items-center">
-                  {/* Placeholder image area */}
                   <span className="text-4xl">📦</span>
                 </div>
                 <div className="p-5">
@@ -256,15 +279,15 @@
         <Section id="about" title="About Me" subtitle="Quick intro">
           <div className="grid md:grid-cols-3 gap-6">
             <div className="md:col-span-2 space-y-4">
-              <p>I\'m currently in my 3rd year of B.Tech CSE (AI & ML). I enjoy solving real problems with simple, clean UI and writing readable code. I\'m fast at picking up new tools and I like shipping things quickly.</p>
-              <p>Outside coding, I\'m into video editing and content creation. I believe in learning-by-doing and shipping small features every day.</p>
+              <p>I'm currently in my 3rd year of B.Tech CSE (AI & ML). I enjoy solving real problems with simple, clean UI and writing readable code. I'm fast at picking up new tools and I like shipping things quickly.</p>
+              <p>Outside coding, I'm into video editing and content creation. I believe in learning-by-doing and shipping small features every day.</p>
             </div>
             <ul className="space-y-2 text-sm">
               <li><strong>Location:</strong> {INFO.location}</li>
               <li><strong>Email:</strong> <a className="underline" href={`mailto:${INFO.email}`}>{INFO.email}</a></li>
               <li><strong>Phone:</strong> <a className="underline" href={`tel:${INFO.phone}`}>{INFO.phone}</a></li>
-              <li><strong>GitHub:</strong> <a className="underline" href={INFO.github}>Profile</a></li>
-              <li><strong>LinkedIn:</strong> <a className="underline" href={INFO.linkedin}>Profile</a></li>
+              <li><strong>GitHub:</strong> <a className="underline" href={INFO.github} target="_blank" rel="noopener noreferrer">Profile</a></li>
+              <li><strong>LinkedIn:</strong> <a className="underline" href={INFO.linkedin} target="_blank" rel="noopener noreferrer">Profile</a></li>
             </ul>
           </div>
         </Section>
@@ -276,7 +299,15 @@
         <Section id="certs" title="Certifications & Training">
           <ul className="grid sm:grid-cols-2 gap-3">
             {CERTIFICATIONS.map((c) => (
-              <li key={c} className="rounded-xl border border-slate-200 dark:border-slate-800 p-4 bg-white/60 dark:bg-slate-900/60">{c}</li>
+              <li key={c.name} className="rounded-xl border border-slate-200 dark:border-slate-800 p-4 bg-white/60 dark:bg-slate-900/60 flex items-center justify-between gap-3">
+                <a href={c.file} target="_blank" rel="noopener noreferrer" className="underline font-medium hover:text-brand-600 inline-flex items-center gap-2">
+                  <Icon name="pdf" />
+                  <span>{c.name}</span>
+                </a>
+                <a href={c.file} download className="text-xs px-3 py-1 inline-flex items-center gap-2 rounded-lg border border-slate-300 dark:border-slate-700 hover:shadow-soft">
+                  <Icon name="download" /> Download
+                </a>
+              </li>
             ))}
           </ul>
         </Section>
@@ -287,10 +318,12 @@
       return (
         <Section id="resume" title="Resume">
           <div className="flex flex-wrap items-center gap-3">
-            <a href={INFO.resumeUrl} className="inline-flex items-center rounded-2xl bg-brand-600 text-white px-5 py-3 font-medium shadow-soft" download>
-              Download Resume
+            <a href={INFO.resumeUrl} target="_blank" rel="noopener noreferrer" className="inline-flex items-center gap-2 rounded-2xl bg-brand-600 text-white px-5 py-3 font-medium shadow-soft hover:translate-y-[-1px] transition">
+              <Icon name="pdf" /> View Resume
             </a>
-            <p className="text-sm text-slate-600 dark:text-slate-300">Upload your PDF to the repo and update <code>INFO.resumeUrl</code>.</p>
+            <a href={INFO.resumeUrl} download className="inline-flex items-center gap-2 rounded-2xl border border-slate-300 dark:border-slate-700 px-5 py-3 font-medium hover:shadow-soft">
+              <Icon name="download" /> Download
+            </a>
           </div>
         </Section>
       );
