--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <div className="relative h-48 w-48 sm:h-60 sm:w-60 rounded-3xl bg-gradient-to-br from-brand-500 to-fuchsia-500 p-1 shadow-soft">
                   <div className="h-full w-full rounded-2xl bg-white dark:bg-slate-900 grid place-items-center overflow-hidden">
                     {/* Profile Picture instead of emoji */}
-                    <img src="./assets/profile.jpg" alt="R Jaswanth" className="h-full w-full object-cover rounded-2xl"/>
+                    <img src="/assets/profile.jpg" alt="R Jaswanth" className="h-full w-full object-cover rounded-2xl" /> 
                   </div>
                 </div>
               </div>
