--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
+    // Tailwind config
     tailwind.config = {
       darkMode: 'class',
       theme: {
@@ -31,7 +32,7 @@
   <!-- React 18 UMD -->
   <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-  <!-- Babel for JSX in-browser (works fine on GitHub Pages) -->
+  <!-- Babel for JSX in-browser -->
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <style>
     .fade-in { animation: fade 0.6s ease 1 both; }
@@ -42,11 +43,8 @@
   <div id="root"></div>
   <script type="text/babel">
     const { useEffect, useState } = React;
-
-    // util
     const cx = (...classes) => classes.filter(Boolean).join(' ');
 
-    // theme
     function useDarkMode() {
       const [dark, setDark] = useState(() => {
         const saved = localStorage.getItem('theme');
@@ -66,22 +64,24 @@
       return [dark, setDark];
     }
 
-    // data
+    // --- Data ---
     const INFO = {
       name: 'R Jaswanth',
       tagline: 'AI/ML Student • Developer • Editor',
+      location: 'India',
       email: 'jaswanthnaidu1309@gmail.com',
       phone: '6301114629',
-      github: 'https://github.com/', 
-      linkedin: 'https://www.linkedin.com/in/jaswanth-ravilla-b40497313?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app',
-      resumeUrl: './assets/jaswanth.pdf',
-      about: `I'm a B.Tech CSE (AI & ML) student at Takshashila University. A passionate Web Developer, Business Development Enthusiast, and Media Editor. I create responsive websites, craft impactful digital content, and contribute to growth-focused business solutions. I love building practical projects,
-      learning fast, and shipping clean, responsive UIs. I also enjoy video editing and creative tech.`
+      github: 'https://github.com/',
+      linkedin: '#',
+      resumeUrl: './assets/Jaswanth_Resume.pdf',
+      about: `I'm a B.Tech CSE (AI & ML) student at Takshashila University. I love building practical projects,
+      learning fast, and shipping clean, responsive UIs. I also enjoy video editing and creative tech.`,
+      profilePic: './assets/profile.jpg'
     };
 
     const SKILLS = [
-      'Python', 'C/C++', 'Data Structures', 'Machine Learning (basics)', 'Git & GitHub',
-      'HTML', 'CSS', 'JavaScript', 'Tailwind', 'React (basics)', 'Video Editing'
+      'Python','C/C++','Data Structures','Machine Learning','Pandas & NumPy','Git & GitHub',
+      'HTML','CSS','JavaScript','Tailwind','React','Video Editing'
     ];
 
     const PROJECTS = [
@@ -89,35 +89,33 @@
         title: 'CGPA Calculator',
         desc: 'Simple tool to compute semester-wise and cumulative CGPA from grade inputs.',
         stack: ['Python', 'Pandas', 'Streamlit'],
-        code: 'Contact Me For More Details',
-        demo: 'Contact Me For More Details',
+        code: '#',
+        demo: '#'
       },
       {
         title: 'AR-Based First Aid & Emergency Guide',
         desc: 'Guided first-aid steps for caregivers using mobile AR overlays (concept prototype).',
-        stack: ['Android', 'ARCore (concept)', 'Figma'],
-        code: 'Contact Me For More Details',
-        demo: 'Contact Me For More Details',
+        stack: ['Android', 'ARCore', 'Figma'],
+        code: '#',
+        demo: '#'
       },
       {
         title: 'Career Path Recommender (Xebia Conclave)',
         desc: 'ML-assisted suggestions for career tracks with a clean UI and Firebase deploy.',
         stack: ['React', 'Tailwind', 'Firebase'],
-        code: 'Contact Me For More Details',
-        demo: 'Contact Me For More Details',
+        code: '#',
+        demo: '#'
       },
     ];
 
     const CERTIFICATIONS = [
-      { name: 'Microsoft Azure Administrator', file: './assets/certificates/azure.pdf' },
-      { name: 'Deloitte Technology Job Simulation', file: './assets/certificates/deloitte.pdf' },
-      { name: 'Simplilearn – Introduction to AI', file: './assets/certificates/simplilearn.pdf' },
-      { name: 'Xebia Academy – Certificate of Participation', file: './assets/certificates/xebia.pdf' },
-      { name: 'Digital Electronics & VLSI', file: './assets/certificates/vlsi.pdf' },
-      { name: 'German Language — Level 1', file: './assets/certificates/german.pdf' },
+      { name: 'Microsoft Azure Administrator (Fundamentals/Administrator track)', link: './assets/azure_cert.pdf' },
+      { name: 'Digital Electronics & VLSI', link: './assets/vlsi_cert.pdf' },
+      { name: 'Deloitte (program/virtual experience)', link: './assets/deloitte_cert.pdf' },
+      { name: 'German Language — Level 1', link: './assets/german_cert.pdf' }
     ];
 
-    // UI Components
+    // --- Components ---
     function Container({ children, className }) {
       return <div className={cx('mx-auto max-w-6xl px-4 sm:px-6 lg:px-8', className)}>{children}</div>;
     }
@@ -136,30 +134,50 @@
       );
     }
 
+    function Nav({ onToggleTheme, dark }) {
+      const [open, setOpen] = useState(false);
+      const links = [['About','#about'],['Skills','#skills'],['Projects','#projects'],['Certifications','#certs'],['Resume','#resume'],['Contact','#contact']];
+      return (
+        <header className="sticky top-0 z-50 backdrop-blur bg-white/80 dark:bg-slate-950/80 border-b border-slate-200 dark:border-slate-800">
+          <Container className="flex items-center justify-between h-16">
+            <a href="#" className="font-extrabold text-lg">{INFO.name}<span className="text-brand-600">.</span></a>
+            <nav className="hidden md:flex items-center gap-6">
+              {links.map(([label, href]) => <a key={label} href={href} className="text-sm font-medium hover:text-brand-600 transition-colors">{label}</a>)}
+              <button onClick={onToggleTheme} className="rounded-xl border px-3 py-1.5 text-sm hover:shadow-soft dark:border-slate-700">{dark ? 'Light' : 'Dark'}</button>
+            </nav>
+            <button className="md:hidden" onClick={() => setOpen(!open)}>
+              <svg width="24" height="24" fill="none" stroke="currentColor" strokeWidth="2"><path d="M4 6h16M4 12h16M4 18h16"/></svg>
+            </button>
+          </Container>
+          {open && (
+            <div className="md:hidden border-t border-slate-200 dark:border-slate-800">
+              <Container className="py-3 flex flex-col gap-3">
+                {links.map(([label, href]) => <a key={label} href={href} className="text-sm font-medium" onClick={() => setOpen(false)}>{label}</a>)}
+                <button onClick={() => { onToggleTheme(); setOpen(false); }} className="mt-2 rounded-xl border px-3 py-2 text-sm dark:border-slate-700">{dark ? 'Light' : 'Dark'} Mode</button>
+              </Container>
+            </div>
+          )}
+        </header>
+      );
+    }
+
     function Hero() {
       return (
         <section className="relative overflow-hidden">
-          <div className="absolute inset-0 -z-10 opacity-50 blur-3xl pointer-events-none" aria-hidden>
-            <div className="absolute -top-24 -left-24 h-64 w-64 rounded-full bg-brand-500/30"></div>
-            <div className="absolute -bottom-24 -right-24 h-64 w-64 rounded-full bg-fuchsia-500/20"></div>
-          </div>
-          <Container className="py-16 sm:py-24">
-            <div className="grid md:grid-cols-2 gap-10 items-center">
-              <div>
-                <h1 className="text-3xl sm:text-5xl font-extrabold tracking-tight">Hi, I'm <span className="text-brand-600">{INFO.name}</span></h1>
-                <p className="mt-3 text-lg sm:text-xl text-slate-600 dark:text-slate-300">{INFO.tagline}</p>
-                <p className="mt-4 max-w-2xl text-slate-600 dark:text-slate-300">{INFO.about}</p>
-                <div className="mt-6 flex flex-wrap gap-3">
-                  <a href="#projects" className="inline-flex items-center rounded-2xl bg-brand-600 text-white px-5 py-3 font-medium shadow-soft hover:translate-y-[-1px] transition">View Projects</a>
-                  <a href="#contact" className="inline-flex items-center rounded-2xl border border-slate-300 dark:border-slate-700 px-5 py-3 font-medium hover:shadow-soft">Contact</a>
-                </div>
+          <Container className="py-16 sm:py-24 grid md:grid-cols-2 gap-10 items-center">
+            <div>
+              <h1 className="text-3xl sm:text-5xl font-extrabold tracking-tight">Hi, I'm <span className="text-brand-600">{INFO.name}</span></h1>
+              <p className="mt-3 text-lg sm:text-xl text-slate-600 dark:text-slate-300">{INFO.tagline}</p>
+              <p className="mt-4 max-w-2xl text-slate-600 dark:text-slate-300">{INFO.about}</p>
+              <div className="mt-6 flex flex-wrap gap-3">
+                <a href="#projects" className="inline-flex items-center rounded-2xl bg-brand-600 text-white px-5 py-3 font-medium shadow-soft hover:translate-y-[-1px] transition">View Projects</a>
+                <a href="#contact" className="inline-flex items-center rounded-2xl border border-slate-300 dark:border-slate-700 px-5 py-3 font-medium hover:shadow-soft">Contact</a>
               </div>
-              <div className="flex justify-center md:justify-end">
-                <div className="relative h-48 w-48 sm:h-60 sm:w-60 rounded-3xl bg-gradient-to-br from-brand-500 to-fuchsia-500 p-1 shadow-soft">
-                  <div className="h-full w-full rounded-2xl bg-white dark:bg-slate-900 grid place-items-center overflow-hidden">
-                    {/* Profile Picture instead of emoji */}
-                    <img src="/assets/profile.jpg" alt="R Jaswanth" className="h-full w-full object-cover rounded-2xl" /> 
-                  </div>
+            </div>
+            <div className="flex justify-center md:justify-end">
+              <div className="relative h-48 w-48 sm:h-60 sm:w-60 rounded-3xl p-1 shadow-soft bg-gradient-to-br from-brand-500 to-fuchsia-500">
+                <div className="h-full w-full rounded-2xl bg-white dark:bg-slate-900 grid place-items-center overflow-hidden">
+                  <img src={INFO.profilePic} alt="Profile" className="h-full w-full object-cover"/>
                 </div>
               </div>
             </div>
@@ -172,9 +190,7 @@
       return (
         <Section id="skills" title="Skills" subtitle="Tech I use & learn">
           <div className="flex flex-wrap gap-2">
-            {SKILLS.map((s) => (
-              <span key={s} className="rounded-full border border-slate-300 dark:border-slate-700 px-3 py-1 text-sm bg-white/60 dark:bg-slate-900/60">{s}</span>
-            ))}
+            {SKILLS.map(s => <span key={s} className="rounded-full border border-slate-300 dark:border-slate-700 px-3 py-1 text-sm bg-white/60 dark:bg-slate-900/60">{s}</span>)}
           </div>
         </Section>
       );
@@ -184,19 +200,13 @@
       return (
         <Section id="projects" title="Projects" subtitle="Selected work & experiments">
           <div className="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
-            {PROJECTS.map((p) => (
+            {PROJECTS.map(p => (
               <article key={p.title} className="group rounded-2xl border border-slate-200 dark:border-slate-800 overflow-hidden bg-white/70 dark:bg-slate-900/70 hover:shadow-soft transition">
-                <div className="h-40 bg-gradient-to-br from-slate-200 to-slate-100 dark:from-slate-800 dark:to-slate-900 grid place-items-center">
-                  <span className="text-4xl">📦</span>
-                </div>
+                <div className="h-40 bg-gradient-to-br from-slate-200 to-slate-100 dark:from-slate-800 dark:to-slate-900 grid place-items-center"><span className="text-4xl">📦</span></div>
                 <div className="p-5">
                   <h3 className="text-lg font-semibold">{p.title}</h3>
                   <p className="mt-2 text-sm text-slate-600 dark:text-slate-300">{p.desc}</p>
-                  <div className="mt-3 flex flex-wrap gap-2">
-                    {p.stack.map((t) => (
-                      <span key={t} className="rounded-md bg-slate-100 dark:bg-slate-800 px-2 py-0.5 text-xs">{t}</span>
-                    ))}
-                  </div>
+                  <div className="mt-3 flex flex-wrap gap-2">{p.stack.map(t => <span key={t} className="rounded-md bg-slate-100 dark:bg-slate-800 px-2 py-0.5 text-xs">{t}</span>)}</div>
                   <div className="mt-4 flex gap-3">
                     <a href={p.code} className="text-sm font-medium underline underline-offset-4">Code</a>
                     <a href={p.demo} className="text-sm font-medium underline underline-offset-4">Live</a>
@@ -214,15 +224,15 @@
         <Section id="about" title="About Me" subtitle="Quick intro">
           <div className="grid md:grid-cols-3 gap-6">
             <div className="md:col-span-2 space-y-4">
-              <p>I'm currently in my 3rd year of B.Tech CSE (AI & ML). I enjoy solving real problems with simple, clean UI and writing readable code. I'm fast at picking up new tools and I like shipping things quickly.</p>
+              <p>I'm currently in my 3rd year of B.Tech CSE (AI & ML). I enjoy solving real problems with simple, clean UI and writing readable code. I'm fast at picking up new tools and like shipping things quickly.</p>
               <p>Outside coding, I'm into video editing and content creation. I believe in learning-by-doing and shipping small features every day.</p>
             </div>
             <ul className="space-y-2 text-sm">
-              {/* Location removed */}
+              <li><strong>Location:</strong> {INFO.location}</li>
               <li><strong>Email:</strong> <a className="underline" href={`mailto:${INFO.email}`}>{INFO.email}</a></li>
               <li><strong>Phone:</strong> <a className="underline" href={`tel:${INFO.phone}`}>{INFO.phone}</a></li>
-              <li><strong>GitHub:</strong> <a className="underline" href={INFO.github} target="_blank" rel="noopener noreferrer">Profile</a></li>
-              <li><strong>LinkedIn:</strong> <a className="underline" href={INFO.linkedin} target="_blank" rel="noopener noreferrer">Profile</a></li>
+              <li><strong>GitHub:</strong> <a className="underline" href={INFO.github}>Profile</a></li>
+              <li><strong>LinkedIn:</strong> <a className="underline" href={INFO.linkedin}>Profile</a></li>
             </ul>
           </div>
         </Section>
@@ -233,14 +243,9 @@
       return (
         <Section id="certs" title="Certifications & Training">
           <ul className="grid sm:grid-cols-2 gap-3">
-            {CERTIFICATIONS.map((c) => (
-              <li key={c.name} className="rounded-xl border border-slate-200 dark:border-slate-800 p-4 bg-white/60 dark:bg-slate-900/60 flex items-center justify-between gap-3">
-                <a href={c.file} target="_blank" rel="noopener noreferrer" className="underline font-medium hover:text-brand-600 inline-flex items-center gap-2">
-                  <span>{c.name}</span>
-                </a>
-                <a href={c.file} download className="text-xs px-3 py-1 inline-flex items-center gap-2 rounded-lg border border-slate-300 dark:border-slate-700 hover:shadow-soft">
-                  Download
-                </a>
+            {CERTIFICATIONS.map(c => (
+              <li key={c.name} className="rounded-xl border border-slate-200 dark:border-slate-800 p-4 bg-white/60 dark:bg-slate-900/60">
+                <a href={c.link} target="_blank" className="underline">{c.name}</a>
               </li>
             ))}
           </ul>
@@ -252,12 +257,8 @@
       return (
         <Section id="resume" title="Resume">
           <div className="flex flex-wrap items-center gap-3">
-            <a href={INFO.resumeUrl} target="_blank" rel="noopener noreferrer" className="inline-flex items-center gap-2 rounded-2xl bg-brand-600 text-white px-5 py-3 font-medium shadow-soft hover:translate-y-[-1px] transition">
-              View Resume
-            </a>
-            <a href={INFO.resumeUrl} download className="inline-flex items-center gap-2 rounded-2xl border border-slate-300 dark:border-slate-700 px-5 py-3 font-medium hover:shadow-soft">
-              Download
-            </a>
+            <a href={INFO.resumeUrl} className="inline-flex items-center rounded-2xl bg-brand-600 text-white px-5 py-3 font-medium shadow-soft" download>Download Resume</a>
+            <p className="text-sm text-slate-600 dark:text-slate-300">Upload your PDF to the repo and update <code>INFO.resumeUrl</code>.</p>
           </div>
         </Section>
       );
@@ -294,10 +295,9 @@
 
     function App() {
       const [dark, setDark] = useDarkMode();
-      const handleToggle = () => setDark(d => !d);
       return (
         <div>
-          <Nav onToggleTheme={handleToggle} dark={dark} />
+          <Nav onToggleTheme={() => setDark(d => !d)} dark={dark}/>
           <main>
             <Hero />
             <About />
